css/style.css
/* Page settings and variables */
:root{
  scroll-behavior: smooth;
  
  
  font-family: 'Be Vietnam Pro', sans-serif;
  font-family: 'Inter', sans-serif;
  font-family: 'Newsreader', serif;
  
  
  --main-color: #1f4002;
  --light-accent: rgba(192, 207, 182, 0.2);
  --mid-accent: #A8C0A3;
  --dark-accent:rgb(26, 79, 17);
  --light-text: #e0e0e0;
  
  background-color: black;
  
}

.page-button{
  display: flex;
  width:max-content;
  margin:0 auto;
  padding-inline: 150px;
  padding-block: 20px;
  background-color: var(--main-color);
}


/* To capitalize words */
.ucwords { text-transform: capitalize; }


/* Global form settings */

.input-field{

  flex-direction: column;
  display: flex;
  align-items:flex-start;
  justify-content: start;
  gap: 10px;
  margin-left: 20px;
}

.form-control,
.form-select{
  width:100%;
}

.form-label{
  margin:0;
}

.form-button{
  display: flex;
  align-items: center;
  justify-content: center;
  column-count: 2;
  margin-top:20px;
  padding-inline:0px;
  width: 300px;
}

.form p input,
.form-select{
  margin-bottom: 10px;
  max-width: 500p;
  border: 1px solid var(--mid-accent);

}
.form-inner{
  display: flex;
  justify-content: center;
  margin: 0 auto;
} 

.form-control:focus,
.form-select:focus {
  border-color: var(--main-color);
  box-shadow: 0 0 0 0.25rem #1f40026b;
}

select option:checked{
  background-color: var(--light-accent) !important;
}

select option:target{
  background-color: var(--mid-accent) !important;
}

/* Navbar */

nav {
  background-color: var(--main-color);
  max-width: 100%;
  margin: 0 auto;
}

.navbar-brand{
  display: flex;
  align-items: center;
  text-decoration: none !important;
  margin-left: 0.5%;
}

#nav-logo{
  height:60px;
}

.logo-text{
  height: 40px;
  padding-left:5px;
}


.navbar-nav{
    gap:50px;
    margin-right: 100px;
}
nav .nav-link {
  color: white;
  text-decoration: none;

  font-family: 'Be Vietnam Pro', sans-serif;
  font-weight:100; 
  border-radius: 10px;
  transition: .4s linear;
}

.navbar-light .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(224, 224, 224, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

nav .nav-link:hover{
    background-color: white;
    color:#1e3f03;
    border-radius: 10px;
}

.navbar-toggler-icon{
    color:white;
}
.navbar-toggler:focus {
    border: 2px solid var(--mid-accent) !important; /* Set your desired outline color */
}

.navbar-brand{
    color:white;
}

.navbar-brand:hover{
    color:white;
}



/* Hero */

#hero {
  min-height: 100vh !important;
  color: rgb(25, 25, 25);
}

.hero-bg-overlay {
  background-image: url("../img/jonathan-kemper-1HHrdIoLFpU-unsplash\ 1.png") !important;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  margin: 0 auto;
  min-height: 100vh;
}

#hero-card {
  margin-top: 70px;
  background-color: rgba(0, 0, 0, 0.7);
  -webkit-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.2);
  box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(3px);
  border-radius: 50px;
}

.welcome-title {
  text-align: center;
  font-size: 4rem;
  font-weight: 400;
  color: var(--light-text);
  padding-bottom: 50px;
  
}

.welcome-title span{
  color: var(--mid-accent);
}

#hero-card p {
  margin: 0 25px;
  font-size: 1.5rem;
  text-align: center;
  color: var(--light-text);
  font-family: Newsreader, serif;
  font-weight: 300;
  padding-bottom: 75px;
}

/* Who We Are */

#who-we-are{
    height: 100vh;
}
#who-we-are >div{
    height: 100%;
}
#who-we-are >div > *{
    height: 100%;
  
}
#whowheare-bg-image{
    background-image: url('https://images.pexels.com/photos/8108006/pexels-photo-8108006.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    padding:0 0 0 0 !important;
}
.section-title{
    font-size:4rem;
    text-align: center;
}

.section-text-content{
    font-size:1.8em;
    font-family: Be Vietnam, sans-serif;
    text-align: center;
}
.bg-overlay{
    height: 100%;
    background-color: rgba(255, 255, 255, 0.499);
}

.who-we-are-btn{
    width:30%; padding:15px;
}


/* About Yourself section */

#about-you-title{
  color:var(--main-color);
  text-align: center;
}

#about-form{
  margin: 0 auto;
  width: 80%;
}

#about-yourself{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height:100vh;
  margin: 0 auto;
  background-color: var(--light-accent);
  padding-bottom: 30px;
}

#about-you-title{
  padding-bottom: 20px;
  font-size: 4rem;
}

#reset-user-form{
  background-color: #510202;
  margin: 0 auto;
}

#about-submit{
  margin:0 auto;
  margin-block: 10px;
}


#diet-type{
display: flex;
justify-content: center;
}

#diet-radio{
  justify-content: center;
}

.range-subheadings span{
  font-family: Be Vietnam Pro, sans-serif;
  font-size: 0.8rem;
  color: var(--main-color);
}

.form-check-label{
  font-family: Be Vietnam Pro, sans-serif;
  font-size: 0.9rem;
  color: var(--main-color);
}

#activity-label,
#diet-label{
  font-family: Be Vietnam Pro, sans-serif;
  font-size: 1rem;
}

.input-group{
  padding-block: 5px;
}

/* Meal form */

#meal-section-title{
  padding-bottom: 20px;
  font-size: 3rem;
  text-align: center;
}

#dyn-name{
  color: var(--dark-accent);
  font-weight: 400;
  font-family: Be Vietnam Pro, sans-serif;;
}


#meal-plan{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height:70vh;
  background-color: var(--mid-accent);
}
.form-container{
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

#meal-form p input{
  border: 1px solid var(--main-color);
  margin-right: 20px;

}

#meal-submit{
  padding-inline: 30px;
}

.add-button {
  padding: 5px 10px;
  margin: 5px;
  font-size: 12px;
}

/* Footer */

#footer {
  background-color: var(--main-color);
  color: white;
  text-align: center;

}

.footer-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  margin: 0 30%;
  margin-bottom: 30px;
}

#logo-footer{
  height:100px;
  opacity: 30%;
}

#brand-footer{
  height: 75px;
  opacity: 30%;
}
/* Media Queries

/* Extra Small Devices (phones) */
@media only screen and (max-width: 576px) {
    #who-we-are {
        height: auto; 
    }
    #who-we-are >div{
        width: 100%;
        height: 100%;
    }

    #whowheare-bg-image {
        visibility: hidden;
    }

    .section-title {
        font-size: 2rem; 
    }

    .section-text-content {
        font-size: 1.2rem; 
    }

    .who-we-are-btn{
    width:100%;
     padding:10px 5px;
    }
  }
  
  /* Small Devices (tablets) */
  @media only screen and (min-width: 577px) and (max-width: 767px) {

    #who-we-are {
        width:100vw;
        height: auto; 
    }

    #whowheare-bg-image {
        display: none;
    }

    .section-title {
        font-size: 2rem; 
    }

    .section-text-content {
        font-size: 1.2rem; 
    }

    .who-we-are-btn{
    width:80%;
     padding:10px 5px;
    }
  }

  /* Medium Devices (desktops) */
@media only screen and (min-width: 768px) and (max-width: 991px) {
    #who-we-are {
        width: 100vw;
        height: auto; 

    #whowheare-bg-image {
        display: none;
    }
  }
  
  /* Large Devices (desktops) */
  @media only screen and (min-width: 992px) and (max-width: 1199px) {
    
  }
  
  /* Extra Large Devices (large desktops) */
  @media only screen and (min-width: 1200px) {
   
  }

}

